--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
  <body>
   <a-scene background="transparent:true" >
    <a-assets>
-    <img id="VR_Wireframe" src="Object Interaction.PNG">
+    <img id="VR_Wireframe" src="Capture2.PNG">
    </a-assets>
    <a-sky src="#VR_Wireframe"></a-sky>
    <a-camera position="0 0 0" fov="90"></a-camera>
